--- a/src/Components/StyleSheets/AdminPage.css
+++ b/src/Components/StyleSheets/AdminPage.css
@@ -13,7 +13,7 @@
     place-items: center;
     margin: 0;
     padding: 0 24px;
-    background-image: url('LoginBg.svg');
+    background-image: url('./LoginBg.svg');
     background-size: cover;
     color: #000;
     animation: rotate 3s infinite alternate linear;
@@ -209,4 +209,22 @@ Footer {
 .Nav.Link {
     color: white;
 
+}
+
+/* IssueContainerStyles */
+
+.issue-card {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+.issue-card:hover {
+    transform: scale(1.03);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
+
+@media(max-width:580px){
+
+    .chart-container .chart{
+        width: 100% !important;
+    }
 }
