--- a/src/Components/StyleSheets/LandingPage.css
+++ b/src/Components/StyleSheets/LandingPage.css
@@ -11,25 +11,15 @@
     height: 95px;
 }
 
-.navbar{
-    border: 3px solid #010e01;
-    border-style: none none solid none;
-  }
+/* .nav-link{
+   color: white !important;
+  } */
   
-  .navbar .container-fluid{
-    flex: 1;
-  }
-  
-  .navbar #navbarSupportedContent{
-    flex: 2;
-  }
-
 .navbar img {
     height: 10vh;
     width: 40vh;
     object-fit: contain;
 }
-
 
 .logo button {
     border-radius: 10px;
@@ -37,8 +27,8 @@
 
 .slideSection img{
     width: 100%;
-    height: 70vh;
-    object-fit: stretch;
+    height: 90vh;
+    object-fit: cover;
 }
 
 .gallery {
@@ -243,7 +233,7 @@
 .photo_gal .card {
     width: 100%;
     display: inline-block;
-    max-width: 224px;
+    max-width: 250px;
     position: relative;
     margin-top: 2.5vh;
 }
@@ -255,7 +245,7 @@
     background: #fff;
     box-shadow: 0 0 6px 1px rgba(0, 0, 0, .4);
     vertical-align: top;
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 .photo_gal .card .card_left,
@@ -292,11 +282,12 @@
 
 .photo_gal .image {
     width: 100%;
-    height: 120px;
+    height: 35vh;
     float: left;
     overflow: hidden;
     position: relative;
-    cursor: pointer
+    cursor: pointer;
+    object-fit: contain;
 }
 
 .photo_gal .image:before {
